Update day 3, sesion 2

--- a/index.html
+++ b/index.html
@@ -155,146 +155,164 @@
 
     <section class="secondary-blogs">
         <article class="item">
-            <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
+            <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2>Title</h2>
-                    <span>[Esto]</span>
-                    <span>[Otro]</span>
+                    <h2 class="article-title-text">¿Cómo convertirse en un diseñador UX/UI?</h2>
+                    <div class="tags">
+                        <span class="tag">[ESTO]</span>
+                        <span class="tag">[OTRO]</span>
+                    </div>
                 </header>
-                <section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                <section class="paragraphs">
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
-                <footer>
-                    <span>by <a href="">Pepe</a></span>
+                <footer class="footer-content">
+                    <span>By <a href="#">Autor</a></span>
                 </footer>
             </div>
         </article>
         <article class="item">
-            <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
+            <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2>Title</h2>
-                    <span>[Esto]</span>
-                    <span>[Otro]</span>
+                    <h2 class="article-title-text">¿Cómo hacer un portfolio de UX/UI Designer?</h2>
+                    <div class="tags">
+                        <span class="tag">[ESTO]</span>
+                        <span class="tag">[OTRO]</span>
+                    </div>
                 </header>
-                <section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                <section class="paragraphs">
+                    <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit.!</p>
                 </section>
-                <footer>
-                    <span>by <a href="">Pepe</a></span>
+                <footer class="footer-content">
+                    <span>By <a href="#">Autor</a></span>
                 </footer>
             </div>
         </article>
         <article class="item">
-            <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
+            <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2>Title</h2>
-                    <span>[Esto]</span>
-                    <span>[Otro]</span>
+                    <h2 class="article-title-text">Los 12 secretos del UX/UI Design</h2>
+                    <div class="tags">
+                        <span class="tag">[ESTO]</span>
+                        <span class="tag">[OTRO]</span>
+                    </div>
                 </header>
-                <section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                <section class="paragraphs">
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
-                <footer>
-                    <span>by <a href="">Pepe</a></span>
+                <footer class="footer-content">
+                    <span>By <a href="#">Autor</a></span>
                 </footer>
             </div>
         </article>
         <article class="item">
-            <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
+            <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2>Title</h2>
-                    <span>[Esto]</span>
-                    <span>[Otro]</span>
+                    <h2 class="article-title-text">Webpack para optimizar tus proyectos</h2>
+                    <div class="tags">
+                        <span class="tag">[ESTO]</span>
+                        <span class="tag">[OTRO]</span>
+                    </div>
                 </header>
-                <section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                <section class="paragraphs">
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
-                <footer>
-                    <span>by <a href="">Pepe</a></span>
+                <footer class="footer-content">
+                    <span>By <a href="#">Autor</a></span>
                 </footer>
             </div>
         </article>
         <article class="item">
-            <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
+            <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2>Title</h2>
-                    <span>[Esto]</span>
-                    <span>[Otro]</span>
+                    <h2 class="article-title-text">CSS3: Variables</h2>
+                    <div class="tags">
+                        <span class="tag">[ESTO]</span>
+                        <span class="tag">[OTRO]</span>
+                    </div>
                 </header>
-                <section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                <section class="paragraphs">
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
-                <footer>
-                    <span>by <a href="">Pepe</a></span>
+                <footer class="footer-content">
+                    <span>By <a href="#">Autor</a></span>
                 </footer>
             </div>
         </article>
         <article class="item">
-            <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
+            <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2>Title</h2>
-                    <span>[Esto]</span>
-                    <span>[Otro]</span>
+                    <h2 class="article-title-text">Lodash: Biblioteca de JavaScript</h2>
+                    <div class="tags">
+                        <span class="tag">[ESTO]</span>
+                        <span class="tag">[OTRO]</span>
+                    </div>
                 </header>
-                <section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                <section class="paragraphs">
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
-                <footer>
-                    <span>by <a href="">Pepe</a></span>
+                <footer class="footer-content">
+                    <span>By <a href="#">Autor</a></span>
                 </footer>
             </div>
         </article>
         <article class="item">
-            <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
+            <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2>Title</h2>
-                    <span>[Esto]</span>
-                    <span>[Otro]</span>
+                    <h2 class="article-title-text">GRID: Realmente no lo entiendo</h2>
+                    <div class="tags">
+                        <span class="tag">[ESTO]</span>
+                        <span class="tag">[OTRO]</span>
+                    </div>
                 </header>
-                <section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                <section class="paragraphs">
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
-                <footer>
-                    <span>by <a href="">Pepe</a></span>
+                <footer class="footer-content">
+                    <span>By <a href="#">Autor</a></span>
                 </footer>
             </div>
         </article>
         <article class="item">
-            <img src="src/images/secondary-header.img.png" alt="" width="200" height="200" class="image">
+            <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2>Title</h2>
-                    <span>[Esto]</span>
-                    <span>[Otro]</span>
+                    <h2 class="article-title-text">Amigos, no sé qué otro título poner</h2>
+                    <div class="tags">
+                        <span class="tag">[ESTO]</span>
+                        <span class="tag">[OTRO]</span>
+                    </div>
                 </header>
-                <section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                <section class="paragraphs">
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
-                <footer>
-                    <span>by <a href="">Pepe</a></span>
+                <footer class="footer-content">
+                    <span>By <a href="#">Autor</a></span>
                 </footer>
             </div>
         </article>
         <article class="item">
-            <img src="src/images/secondary-header.img-2.png" alt="" width="200" height="200" class="image">
+            <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2>Title</h2>
-                    <span>[Esto]</span>
-                    <span>[Otro]</span>
+                    <h2 class="article-title-text">Corto</h2>
+                    <div class="tags">
+                        <span class="tag">[ESTO]</span>
+                        <span class="tag">[OTRO]</span>
+                    </div>
                 </header>
-                <section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                <section class="paragraphs">
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
-                <footer>
-                    <span>by <a href="">Pepe</a></span>
+                <footer class="footer-content">
+                    <span>By <a href="#">Autor</a></span>
                 </footer>
             </div>
         </article>
