--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                 <header>
                     <h2 class="article-title-text">¿Cómo convertirse en un diseñador UX/UI?</h2>
                     <div class="tags">
-                        <span class="tag">[ESTO]</span>
-                        <span class="tag">[OTRO]</span>
+                        <span class="tag">Diseño</span>
+                        <span class="tag">UI/UX</span>
                     </div>
                 </header>
                 <section class="paragraphs">
@@ -178,8 +178,8 @@
                 <header>
                     <h2 class="article-title-text">¿Cómo hacer un portfolio de UX/UI Designer?</h2>
                     <div class="tags">
-                        <span class="tag">[ESTO]</span>
-                        <span class="tag">[OTRO]</span>
+                        <span class="tag">Portfolio</span>
+                        <span class="tag">UI/UX</span>
                     </div>
                 </header>
                 <section class="paragraphs">
@@ -196,8 +196,8 @@
                 <header>
                     <h2 class="article-title-text">Los 12 secretos del UX/UI Design</h2>
                     <div class="tags">
-                        <span class="tag">[ESTO]</span>
-                        <span class="tag">[OTRO]</span>
+                        <span class="tag">Diseño</span>
+                        <span class="tag">UI/UX</span>
                     </div>
                 </header>
                 <section class="paragraphs">
@@ -214,8 +214,8 @@
                 <header>
                     <h2 class="article-title-text">Webpack para optimizar tus proyectos</h2>
                     <div class="tags">
-                        <span class="tag">[ESTO]</span>
-                        <span class="tag">[OTRO]</span>
+                        <span class="tag">Web</span>
+                        <span class="tag">Proyectos</span>
                     </div>
                 </header>
                 <section class="paragraphs">
@@ -232,8 +232,8 @@
                 <header>
                     <h2 class="article-title-text">CSS3: Variables</h2>
                     <div class="tags">
-                        <span class="tag">[ESTO]</span>
-                        <span class="tag">[OTRO]</span>
+                        <span class="tag">CSS3</span>
+                        <span class="tag">Tricks</span>
                     </div>
                 </header>
                 <section class="paragraphs">
@@ -250,8 +250,8 @@
                 <header>
                     <h2 class="article-title-text">Lodash: Biblioteca de JavaScript</h2>
                     <div class="tags">
-                        <span class="tag">[ESTO]</span>
-                        <span class="tag">[OTRO]</span>
+                        <span class="tag">Biblioteca</span>
+                        <span class="tag">ECMAScript</span>
                     </div>
                 </header>
                 <section class="paragraphs">
@@ -268,8 +268,8 @@
                 <header>
                     <h2 class="article-title-text">GRID: Realmente no lo entiendo</h2>
                     <div class="tags">
-                        <span class="tag">[ESTO]</span>
-                        <span class="tag">[OTRO]</span>
+                        <span class="tag">CSS3</span>
+                        <span class="tag">GRID</span>
                     </div>
                 </header>
                 <section class="paragraphs">
@@ -286,8 +286,8 @@
                 <header>
                     <h2 class="article-title-text">Amigos, no sé qué otro título poner</h2>
                     <div class="tags">
-                        <span class="tag">[ESTO]</span>
-                        <span class="tag">[OTRO]</span>
+                        <span class="tag">Help</span>
+                        <span class="tag">Me!</span>
                     </div>
                 </header>
                 <section class="paragraphs">
