Refactored some files

--- a/index.html
+++ b/index.html
@@ -24,22 +24,21 @@
 
 <body>
 
-    <header class="principal-header">
-        <ul class="principal-list-header">
+    <nav class="nav">
+        <ul class="list-header">
             <li><a href="#" class="hyperlink-principal-header" target="_blank">Programación</a></li>
             <li><a href="#" class="hyperlink-principal-header" target="_blank">Tips</a></li>
 
-            <li><a href="#" target="_blank"><img src="src/images/shev-shelio.png" class="icon-principal-header"
-                        alt="Icono del blog"></a></li>
+            <li><a href="#" target="_blank"><img src="src/images/shev-shelio.png" class="icon-header" alt="Icono del blog"></a></li>
 
             <li><a href="#" class="hyperlink-principal-header" target="_blank">Diseño</a></li>
             <li><a href="#" class="hyperlink-principal-header" target="_blank">SEO</a></li>
         </ul>
-    </header>
-    <div class="secondary-header">
+    </nav>
+    <header class="header">
         <h1 class="primary-title">WebDesinger Department</h1>
         <h2 class="secondary-title">Diseños de páginas web</h2>
-    </div>
+    </header>
 
     <main class="principal-blogs">
         <article class="article-blog">
@@ -354,8 +353,9 @@
         <input type="email">
         <button type="submit">Suscribirse</button>
     </footer>
-    <footer class="secondary-footer">
-        <div class="secondary-container-footer">
+
+    <footer class="footer">
+        <div class="container-footer">
             <div class="link">
                 <ul class="link-list">
                     <li>Inicio</li>
