--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </section>
                 </div>
                 <footer class="footer-content">
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
             <div class="article-image">
@@ -90,7 +90,7 @@
                     </section>
                 </div>
                 <footer>
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
             <div class="article-image">
@@ -116,7 +116,7 @@
                     </section>
                 </div>
                 <footer>
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
             <div class="article-image">
@@ -143,7 +143,7 @@
                     </section>
                 </div>
                 <footer>
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
             <div class="article-image">
@@ -167,7 +167,7 @@
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
                 <footer class="footer-content">
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
         </article>
@@ -185,7 +185,7 @@
                     <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit.!</p>
                 </section>
                 <footer class="footer-content">
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
         </article>
@@ -203,7 +203,7 @@
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
                 <footer class="footer-content">
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
         </article>
@@ -221,7 +221,7 @@
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
                 <footer class="footer-content">
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
         </article>
@@ -239,7 +239,7 @@
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
                 <footer class="footer-content">
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
         </article>
@@ -257,7 +257,7 @@
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
                 <footer class="footer-content">
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
         </article>
@@ -275,7 +275,7 @@
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
                 <footer class="footer-content">
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
         </article>
@@ -293,7 +293,7 @@
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
                 <footer class="footer-content">
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
         </article>
@@ -311,7 +311,7 @@
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
                 </section>
                 <footer class="footer-content">
-                    <span>By <a href="#">Autor</a></span>
+                    <span>By <a href="#" class="author">Autor</a></span>
                 </footer>
             </div>
         </article>
