--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Title + Favicon -->
     <title>Blog</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
 
 </head>
 
