--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
     <nav class="nav">
         <ul class="list-header">
-            <li><a href="#" class="hyperlink-principal-header" target="_blank">Programación</a></li>
-            <li><a href="#" class="hyperlink-principal-header" target="_blank">Tips</a></li>
+            <li><a href="#" class="hyperlink-list-header" target="_blank">Programación</a></li>
+            <li><a href="#" class="hyperlink-list-header" target="_blank">Tips</a></li>
 
             <li><a href="#" target="_blank"><img src="src/images/shev-shelio.png" class="icon-header" alt="Icono del blog"></a></li>
 
-            <li><a href="#" class="hyperlink-principal-header" target="_blank">Diseño</a></li>
-            <li><a href="#" class="hyperlink-principal-header" target="_blank">SEO</a></li>
+            <li><a href="#" class="hyperlink-list-header" target="_blank">Diseño</a></li>
+            <li><a href="#" class="hyperlink-list-header" target="_blank">SEO</a></li>
         </ul>
     </nav>
     <header class="header">
