--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     </header>
 
     <main class="principal-blogs">
-        <article class="article-blog">
+        <article class="article-blog border-gradient-principal">
             <div class="article-content">
                 <div class="body-content">
                     <header class="article-title">
-                        <h2 class="article-title-text">UI cheat sheet: Spacing friendships</h2>
+                        <h2 class="title-text">UI cheat sheet: Spacing friendships</h2>
                     </header>
                     <section class="information">
                         <div class="tags">
@@ -70,11 +70,11 @@
                 <img src="/src/images/spacing.webp" class="image66" alt="">
             </div>
         </article>
-        <article class="article-blog">
+        <article class="article-blog border-gradient-principal">
             <div class="article-content">
                 <div class="container-container">
                     <header class="article-title">
-                        <h2 class="article-title-text">How to Design a Product in 5 Steps
+                        <h2 class="title-text">How to Design a Product in 5 Steps
                         </h2>
                     </header>
                     <section class="information">
@@ -97,11 +97,11 @@
                 <img src="/src/images/steps-to-design-a-product.webp" class="image66" alt="">
             </div>
         </article>
-        <article class="article-blog">
+        <article class="article-blog border-gradient-principal">
             <div class="article-content">
                 <div class="container-container">
                     <header class="article-title">
-                        <h2 class="article-title-text">UI Design for Developers</h2>
+                        <h2 class="title-text">UI Design for Developers</h2>
                     </header>
                     <section class="information">
                         <div class="tags">
@@ -123,11 +123,11 @@
                 <img src="/src/images/ui-for-developers.webp" class="image66" alt="">
             </div>
         </article>
-        <article class="article-blog">
+        <article class="article-blog border-gradient-principal">
             <div class="article-content">
                 <div class="container-container">
                     <header class="article-title">
-                        <h2 class="article-title-text">HTML Line Spacing: The Fine Line Between Good and Bad UX Design
+                        <h2 class="title-text">HTML Line Spacing: The Fine Line Between Good and Bad UX Design
                         </h2>
                     </header>
                     <section class="information">
@@ -153,11 +153,11 @@
     </main>
 
     <section class="secondary-blogs">
-        <article class="item">
+        <article class="item border-gradient-secondary">
             <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2 class="article-title-text">¿Cómo convertirse en un diseñador UX/UI?</h2>
+                    <h2 class="title-text">¿Cómo convertirse en un diseñador UX/UI?</h2>
                     <div class="tags">
                         <span class="tag">Diseño</span>
                         <span class="tag">UI/UX</span>
@@ -171,11 +171,11 @@
                 </footer>
             </div>
         </article>
-        <article class="item">
+        <article class="item border-gradient-secondary">
             <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2 class="article-title-text">¿Cómo hacer un portfolio de UX/UI Designer?</h2>
+                    <h2 class="title-text">¿Cómo hacer un portfolio de UX/UI Designer?</h2>
                     <div class="tags">
                         <span class="tag">Portfolio</span>
                         <span class="tag">UI/UX</span>
@@ -189,11 +189,11 @@
                 </footer>
             </div>
         </article>
-        <article class="item">
+        <article class="item border-gradient-secondary">
             <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2 class="article-title-text">Los 12 secretos del UX/UI Design</h2>
+                    <h2 class="title-text">Los 12 secretos del UX/UI Design</h2>
                     <div class="tags">
                         <span class="tag">Diseño</span>
                         <span class="tag">UI/UX</span>
@@ -207,11 +207,11 @@
                 </footer>
             </div>
         </article>
-        <article class="item">
+        <article class="item border-gradient-secondary">
             <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2 class="article-title-text">Webpack para optimizar tus proyectos</h2>
+                    <h2 class="title-text">Webpack para optimizar tus proyectos</h2>
                     <div class="tags">
                         <span class="tag">Web</span>
                         <span class="tag">Proyectos</span>
@@ -225,11 +225,11 @@
                 </footer>
             </div>
         </article>
-        <article class="item">
+        <article class="item border-gradient-secondary">
             <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2 class="article-title-text">CSS3: Variables</h2>
+                    <h2 class="title-text">CSS3: Variables</h2>
                     <div class="tags">
                         <span class="tag">CSS3</span>
                         <span class="tag">Tricks</span>
@@ -243,11 +243,11 @@
                 </footer>
             </div>
         </article>
-        <article class="item">
+        <article class="item border-gradient-secondary">
             <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2 class="article-title-text">Lodash: Biblioteca de JavaScript</h2>
+                    <h2 class="title-text">Lodash: Biblioteca de JavaScript</h2>
                     <div class="tags">
                         <span class="tag">Biblioteca</span>
                         <span class="tag">ECMAScript</span>
@@ -261,11 +261,11 @@
                 </footer>
             </div>
         </article>
-        <article class="item">
+        <article class="item border-gradient-secondary">
             <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2 class="article-title-text">GRID: Realmente no lo entiendo</h2>
+                    <h2 class="title-text">GRID: Realmente no lo entiendo</h2>
                     <div class="tags">
                         <span class="tag">CSS3</span>
                         <span class="tag">GRID</span>
@@ -279,11 +279,11 @@
                 </footer>
             </div>
         </article>
-        <article class="item">
+        <article class="item border-gradient-secondary">
             <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2 class="article-title-text">Amigos, no sé qué otro título poner</h2>
+                    <h2 class="title-text">Amigos, no sé qué otro título poner</h2>
                     <div class="tags">
                         <span class="tag">Help</span>
                         <span class="tag">Me!</span>
@@ -297,11 +297,11 @@
                 </footer>
             </div>
         </article>
-        <article class="item">
+        <article class="item border-gradient-secondary">
             <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2 class="article-title-text">Corto</h2>
+                    <h2 class="title-text">Corto</h2>
                     <div class="tags">
                         <span class="tag">[ESTO]</span>
                         <span class="tag">[OTRO]</span>
@@ -317,37 +317,72 @@
         </article>
     </section>
 
-    <article class="popular-blogs">
-        <header class="">
-            <h3>Publicaciones populares</h3>
+    <article class="popular-author">
+        <header class="popular-author-header">
+            <h3 class="title-text">Autores destacados</h3>
         </header>
 
-        <div class="container-popular-blogs">
-            <section class="popular-blog">
-                <img src="https://placehold.co/400" alt="" class="image-popular">
-                <h4>Un título super largo</h4>
-                <span>By <a href="#">Pepe</a></span>
+        <div class="container-popular-author">
+            <section class="card-popular-author border-gradient-secondary">
+                <img src="https://placehold.co/400" alt="" class="image-popular-author">
+                <article class="author-information">
+                    <header>
+                        <h4><a href="#" class="author">Vanessa Lilith</a></h4>
+                        <p>Ha escrito 123 publicaciones</p>
+                    </header>
+                    <section class="tags">
+                        <span class="tag">CSS3</span>
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">C++</span>
+                        <span class="tag">UI/UX</span>
+                        <span class="tag">Desarrollo</span>
+                    </section>
+                </article>
             </section>
-            <section class="popular-blog">
-                <img src="https://placehold.co/400" alt="" class="image-popular">
-                <h4>Un título super largo</h4>
-                <span>By <a href="#">Pepe</a></span>
+            <section class="card-popular-author border-gradient-secondary">
+                <img src="https://placehold.co/400" alt="" class="image-popular-author">
+                <article class="author-information">
+                    <header>
+                        <h4><a href="#" class="author">Melanie Romina</a></h4>
+                        <p>Ha escrito 01 publicaciones</p>
+                    </header>
+                    <section class="tags">
+                        <span class="tag">Prolog</span>
+                    </section>
+                </article>
             </section>
-            <section class="popular-blog">
-                <img src="https://placehold.co/400" alt="" class="image-popular">
-                <h4>Un título super largo</h4>
-                <span>By <a href="#">Pepe</a></span>
+            <section class="card-popular-author border-gradient-secondary">
+                <img src="https://placehold.co/400" alt="" class="image-popular-author">
+                <article class="author-information">
+                    <header>
+                        <h4><a href="#" class="author">Helen Smith</a></h4>
+                        <p>Ha escrito 50 publicaciones</p>
+                    </header>
+                    <section class="tags">
+                        <span class="tag">Java</span>
+                        <span class="tag">C++</span>
+                        <span class="tag">C#</span>
+                    </section>
+                </article>
             </section>
-            <section class="popular-blog">
-                <img src="https://placehold.co/400" alt="" class="image-popular">
-                <h4>Un título super largo</h4>
-                <span>By <a href="#">Pepe</a></span>
+            <section class="card-popular-author border-gradient-secondary">
+                <img src="https://placehold.co/400" alt="" class="image-popular-author">
+                <article class="author-information">
+                    <header>
+                        <h4><a href="#" class="author">Necesito un nombre largo para que rompa el texto</a></h4>
+                        <p>Ha escrito tantas publicaciones que perdimos la cuenta</p>
+                    </header>
+                    <section class="tags">
+                        <span class="tag">[ESTO]</span>
+                        <span class="tag">[OTRO]</span>
+                        <span class="tag">[LARGOROMPE]</span>
+                    </section>
+                </article>
             </section>
         </div>
-
     </article>
 
-    <footer class="principal-footer">
+    <footer class="promotion">
         <h3>Entra para recibir notificaciones</h3>
         <span>Obten acceso exclusivo para X cosa, solo debes proporcionar tu correo eléctronico</span>
         <input type="email">
