--- a/index.html
+++ b/index.html
@@ -382,12 +382,24 @@
         </div>
     </article>
 
-    <footer class="promotion">
-        <h3>Entra para recibir notificaciones</h3>
-        <span>Obten acceso exclusivo para X cosa, solo debes proporcionar tu correo eléctronico</span>
-        <input type="email">
-        <button type="submit">Suscribirse</button>
-    </footer>
+    <article class="promotion">
+        <div class="promotion-container border-gradient-principal">
+            <header>
+                <h3 class="title-text">Entra para recibir notificaciones</h3>
+            </header>
+            <p class="paragraphs">Obten acceso exclusivo para X cosa, solo debes proporcionar tu correo eléctronico</p>
+            <div class="form-promotion">
+                <div class="form">
+                    <input type="email">
+                    <button type="submit">Suscribirse</button>
+                </div>
+                <label>
+                    <input type="checkbox">
+                    Acepto los términos y condiciones
+                </label>
+            </div>
+        </div>
+    </article>
 
     <footer class="footer">
         <div class="container-footer">
