--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <li><a href="#" class="hyperlink-list-header" target="_blank">Programación</a></li>
             <li><a href="#" class="hyperlink-list-header" target="_blank">Tips</a></li>
 
-            <li><a href="#" target="_blank"><img src="src/images/shev-shelio.png" class="icon-header" alt="Icono del blog"></a></li>
+            <li><a href="#" target="_blank"><img src="src/images/shev-shelio.png" class="icon-header"
+                        alt="Icono del blog"></a></li>
 
             <li><a href="#" class="hyperlink-list-header" target="_blank">Diseño</a></li>
             <li><a href="#" class="hyperlink-list-header" target="_blank">SEO</a></li>
@@ -54,10 +55,14 @@
                         </div>
                         <div class="paragraphs">
                             <p class="paragraph">
-                                Para mí, la forma más fácil de ver la habilidad de un diseñador de interfaces es cómo utiliza el
-                                espaciado en su diseño. El color, la tipografía, las imágenes, etc., suelen venir dados en una guía
-                                de marca, pero utilizar correctamente el espaciado es una habilidad. Después de un tiempo se
-                                convierte en algo natural, pero sólo después de haber aprendido y utilizado las reglas básicas.
+                                Para mí, la forma más fácil de ver la habilidad de un diseñador de interfaces es cómo
+                                utiliza el
+                                espaciado en su diseño. El color, la tipografía, las imágenes, etc., suelen venir dados
+                                en una guía
+                                de marca, pero utilizar correctamente el espaciado es una habilidad. Después de un
+                                tiempo se
+                                convierte en algo natural, pero sólo después de haber aprendido y utilizado las reglas
+                                básicas.
                             </p>
                         </div>
                     </section>
@@ -84,7 +89,12 @@
                         </div>
                         <div class="paragraphs">
                             <p class="paragraph">
-                                La calidad del diseño va más allá de ofrecer una interfaz visualmente atractiva; tiene un impacto directo en el éxito comercial del producto. Según McKinsey & Company, el uso de métodos de pensamiento de diseño conduce a un aumento del 35% en los ingresos. También provoca un aumento del rendimiento del 56% en comparación con las empresas que dejan el diseño del producto en un segundo plano. Pero, ¿qué se necesita para hacer "bien" el diseño de productos?
+                                La calidad del diseño va más allá de ofrecer una interfaz visualmente atractiva; tiene
+                                un impacto directo en el éxito comercial del producto. Según McKinsey & Company, el uso
+                                de métodos de pensamiento de diseño conduce a un aumento del 35% en los ingresos.
+                                También provoca un aumento del rendimiento del 56% en comparación con las empresas que
+                                dejan el diseño del producto en un segundo plano. Pero, ¿qué se necesita para hacer
+                                "bien" el diseño de productos?
                             </p>
                         </div>
                     </section>
@@ -110,7 +120,12 @@
                         </div>
                         <div class="paragraphs">
                             <p class="paragraph">
-                                Los desarrolladores de interfaz de usuario desempeñan un papel vital en la usabilidad, la intuitividad y el rendimiento de un producto digital. "Los diseñadores de UX tienen cero control sobre la UX entregada a los usuarios pero 100% de responsabilidad. Los ingenieros tienen cero responsabilidad sobre la UX entregada a los usuarios pero 100% de control". Erica Rider, UX Lead EPX en PayPal Entender los principios de diseño de la interfaz de usuario, la experiencia (...)
+                                Los desarrolladores de interfaz de usuario desempeñan un papel vital en la usabilidad,
+                                la intuitividad y el rendimiento de un producto digital. "Los diseñadores de UX tienen
+                                cero control sobre la UX entregada a los usuarios pero 100% de responsabilidad. Los
+                                ingenieros tienen cero responsabilidad sobre la UX entregada a los usuarios pero 100% de
+                                control". Erica Rider, UX Lead EPX en PayPal Entender los principios de diseño de la
+                                interfaz de usuario, la experiencia (...)
                             </p>
                         </div>
                     </section>
@@ -137,7 +152,11 @@
                         </div>
                         <div class="paragraphs">
                             <p class="paragraph">
-                                El interlineado HTML -el espacio vertical entre dos líneas de texto dentro de un párrafo- no es lo más emocionante en el mundo del diseño de UX, pero importa más de lo que crees. Este elemento de estilo está relacionado con la estrategia de experiencia y el diseño de interacción, dos de los cuatro cuadrantes de diseño de UX que se utilizan para crear una experiencia de usuario increíble. Pero va mucho más allá.
+                                El interlineado HTML -el espacio vertical entre dos líneas de texto dentro de un
+                                párrafo- no es lo más emocionante en el mundo del diseño de UX, pero importa más de lo
+                                que crees. Este elemento de estilo está relacionado con la estrategia de experiencia y
+                                el diseño de interacción, dos de los cuatro cuadrantes de diseño de UX que se utilizan
+                                para crear una experiencia de usuario increíble. Pero va mucho más allá.
                             </p>
                         </div>
                     </section>
@@ -385,19 +404,20 @@
     <article class="promotion">
         <div class="promotion-container border-gradient-principal">
             <header>
-                <h3 class="title-text">Entra para recibir notificaciones</h3>
+                <h3 class="title-text">Únase a más de 500.000 suscriptores
+                </h3>
             </header>
-            <p class="paragraphs">Obten acceso exclusivo para X cosa, solo debes proporcionar tu correo eléctronico</p>
-            <div class="form-promotion">
+            <p class="paragraphs">Obtenga acceso exclusivo a regalos y noticias. No enviamos spam, ni alquilamos o vendemos su correo electrónico. <a href="">Consulte nuestra Política de privacidad.</a></p>
+            <form action="" method="get" class="form-promotion">
                 <div class="form">
-                    <input type="email">
-                    <button type="submit">Suscribirse</button>
+                    <input type="email" name="email" id="email" placeholder="Ingrese su correo eléctronico" required>
+                    <button type="submit" for="email">Suscribirse</button>
                 </div>
-                <label>
-                    <input type="checkbox">
+                <label class="paragraphs">
+                    <input type="checkbox" required>
                     Acepto los términos y condiciones
                 </label>
-            </div>
+            </form>
         </div>
     </article>
 
