--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
         </ul>
     </nav>
     <header class="header">
-        <h1 class="primary-title">WebDesinger Department</h1>
-        <h2 class="secondary-title">Diseños de páginas web</h2>
+        <h1 class="primary-title">
+            <span class="span-title">W</span><span class="span-title">e</span><span class="span-title">b</span><span class="span-title">D</span><span class="span-title">e</span><span class="span-title">s</span><span class="span-title">i</span><span class="span-title">g</span><span class="span-title">n</span><span class="span-title">e</span><span class="span-title">r</span>
+        </h1>
+        <!-- <p class="secondary-title">Diseños de páginas web</p> -->
     </header>
 
     <main class="principal-blogs">
@@ -176,7 +178,9 @@
             <img src="src/images/secondary-header.img.png" alt="" class="image">
             <div class="information">
                 <header>
-                    <h2 class="title-text">¿Cómo convertirse en un diseñador UX/UI?</h2>
+                    <h2>
+                        <a href="#" class="title-text">¿Cómo convertirse en un diseñador UX/UI?</a>
+                    </h2>
                     <div class="tags">
                         <span class="tag">Diseño</span>
                         <span class="tag">UI/UX</span>
@@ -347,7 +351,7 @@
                 <article class="author-information">
                     <header>
                         <h4><a href="#" class="author">Vanessa Lilith</a></h4>
-                        <p>Ha escrito 123 publicaciones</p>
+                        <p class="paragraphs">Ha escrito 123 publicaciones</p>
                     </header>
                     <section class="tags">
                         <span class="tag">CSS3</span>
@@ -363,7 +367,7 @@
                 <article class="author-information">
                     <header>
                         <h4><a href="#" class="author">Melanie Romina</a></h4>
-                        <p>Ha escrito 01 publicaciones</p>
+                        <p class="paragraphs">Ha escrito 01 publicaciones</p>
                     </header>
                     <section class="tags">
                         <span class="tag">Prolog</span>
@@ -375,7 +379,7 @@
                 <article class="author-information">
                     <header>
                         <h4><a href="#" class="author">Helen Smith</a></h4>
-                        <p>Ha escrito 50 publicaciones</p>
+                        <p class="paragraphs">Ha escrito 50 publicaciones</p>
                     </header>
                     <section class="tags">
                         <span class="tag">Java</span>
@@ -389,7 +393,7 @@
                 <article class="author-information">
                     <header>
                         <h4><a href="#" class="author">Necesito un nombre largo para que rompa el texto</a></h4>
-                        <p>Ha escrito tantas publicaciones que perdimos la cuenta</p>
+                        <p class="paragraphs">Ha escrito tantas publicaciones que perdimos la cuenta</p>
                     </header>
                     <section class="tags">
                         <span class="tag">[ESTO]</span>
@@ -411,7 +415,7 @@
             <form action="" method="get" class="form-promotion">
                 <div class="form">
                     <input type="email" name="email" id="email" placeholder="Ingrese su correo eléctronico" required>
-                    <button type="submit" for="email">Suscribirse</button>
+                    <button type="submit">Suscribirse</button>
                 </div>
                 <label class="paragraphs">
                     <input type="checkbox" required>
@@ -425,19 +429,42 @@
         <div class="container-footer">
             <div class="link">
                 <ul class="link-list">
-                    <li>Inicio</li>
-                    <li>Acerca de</li>
-                    <li>Compañeros</li>
-                    <li>Advertencias</li>
-                    <li>Contact</li>
+                    <li>
+                        <a href="" class="author">Inicio</a>
+                    </li>
+                    <li>
+                        <a href="" class="author">Sobre nosotros</a>
+                    </li>
+                    <li>
+                        <a href="" class="author">Advertencias</a>
+                    </li>
+                    <li>
+                        <a href="" class="author">Contacto</a>
+                    </li>
                 </ul>
             </div>
             <div class="social-media">
                 <ul class="social-medio-list">
-                    <li>Facebook</li>
-                    <li>Instagram</li>
-                    <li>Discord</li>
-                    <li>GitHub</li>
+                    <li>
+                        <a href="#">
+                            <img src="src/images/icons/facebook.png" alt="Icono de Facebook" width="50">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="src/images/icons/instagram.png" alt="Icono de Instagram" width="50">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/MrRedu" target="_blank">
+                            <img src="src/images/icons/github.png" alt="Icono de GitHub" width="50">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:abc@example.com">
+                            <img src="src/images/icons/correo.png" alt="Icono del correo eléctronico" width="50">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
